@@ -1,6 +1,8 @@
 package com.shikhilrane.personCity.personToCity.service.ServiceImplmentations;
 
+import com.shikhilrane.personCity.personToCity.dto.CityDto;
 import com.shikhilrane.personCity.personToCity.dto.PersonDto;
+import com.shikhilrane.personCity.personToCity.dto.PersonDtoForCity;
 import com.shikhilrane.personCity.personToCity.entities.Person;
 import com.shikhilrane.personCity.personToCity.repositories.PersonRepository;
 import com.shikhilrane.personCity.personToCity.service.CityService;
@@ -20,17 +22,16 @@ public class CityServiceImpl implements CityService {
 
 
     @Override
-    public List<PersonDto> getAllPersons(Long id) {
-
-        List<Person> all = personRepository.findByCityId(id);
-
-        return all.stream().map(p -> {
-            PersonDto dto = new PersonDto();
-            dto.setId(p.getId());
-            dto.setName(p.getName());
-            dto.setAge(p.getAge());
-            dto.setCity_id(p.getCity().getId());
-            return dto;
-        }).collect(Collectors.toList());
+    public List<PersonDtoForCity> getAllPersons(Long id) {
+        return personRepository.findByCityId(id)
+                .stream()
+                .map(p -> {
+                    PersonDtoForCity dto = new PersonDtoForCity();
+                    dto.setId(p.getId());
+                    dto.setName(p.getName());
+                    dto.setAge(p.getAge());
+                    dto.setCityName(p.getCity().getName());
+                    return dto;
+                }).toList();
     }
 }
